# auto-opti

./: .gitignore  pyproject.toml
auto_opti/: config.py  param.py  runner.py
